--- a/_posts/2020-01-01-the-us-narrative-today.html
+++ b/_posts/2020-01-01-the-us-narrative-today.html
@@ -1617,107 +1617,107 @@ stories:
   domain: http://www.joplinglobe.com/
   link: https://www.joplinglobe.com/sports/national_sports/redskins-hire-ron-rivera-as-coach/image_4fdffe72-d6b1-5c56-80b2-70253d0569da.html
 images:
-- name: border-crossing-bordercrossing-aqua.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-aqua.png
-- name: old-granary-field-oldhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-dali-two.jpg
-- name: store-on-corner-store-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-dali-three.jpg
-- name: fence-mexico-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-hot-spicy.jpg
-- name: old-building-clouds-with-tree-norman-rockwell-ruby-bridges.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-norman-rockwell-ruby-bridges.jpg
-- name: server-cloud1-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-blue-circuit-5.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-space-pizza.png
-- name: subway-subway-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-creativity.jpg
-- name: nazi-invasion-statue-of-liberty-front-bright.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-of-liberty-front-bright.jpg
-- name: adam-smith-adam-smith-neo-instinct.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-neo-instinct.jpg
-- name: rain-princess-construction-crane-city.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-construction-crane-city.jpg
-- name: bf-skinner-british-black-cab-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-british-black-cab-street.jpg
-- name: hollywood-building-hollywood-building-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-colored-circuits.jpg
-- name: razorwire-DSC-0080-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-colorful-blocks.jpg
-- name: wind-mills-windmills-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-crafty-painting.jpg
-- name: mediterranean-mediterranean-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-marcel-duchamp.jpg
-- name: miamibeach-miamibeach-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-kandinsky-bv.jpg
-- name: nazi-invasion-IMG_6288.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6288.jpg
-- name: adam-smith-adam-smith-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-blue-granite.jpg
-- name: la-muse-freeway-carss-overpass.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-freeway-carss-overpass.jpg
-- name: copper-circuit-old-man-crossing-border.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-man-crossing-border.jpg
-- name: downtown-trucksilo-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-trucksilo-crafty-painting.jpg
-- name: white-house-lawn-white-house-window-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-purp-paper.jpg
-- name: capital-battle-capitolbattle-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-light-dali.jpg
-- name: cargo-ship-cargo-ship-on-sea-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-marcel-duchamp.jpg
-- name: death-valley-death-valley-national-park-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-wols.jpg
-- name: old-school-house-old-schoolhouse-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-creativity.jpg
-- name: stories-36349148770-1a9d2692b2-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-36349148770-1a9d2692b2-z.jpg
-- name: white-house-whitehouse-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-matrix.jpg
-- name: stalin-time-miami-beach-walkway.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-miami-beach-walkway.jpg
-- name: border-crossing-bordercrossing-post-modern.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-post-modern.png
-- name: bf-skinner-times-square-up-road.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-times-square-up-road.jpg
-- name: castle-wall-DSC-0067-constitution.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-constitution.JPG
-- name: stalin-time-satellite-dish-pointing-upwards.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-satellite-dish-pointing-upwards.jpg
-- name: dragon-desert-desert-dragon-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-feed-people.jpg
-- name: amusement-park-amusement-park-2-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-matrix.jpg
-- name: bf-skinner-down-the-line-harlem.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-down-the-line-harlem.jpg
-- name: stories-4882162452-fa3126b38d-b-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-4882162452-fa3126b38d-b-aqua.jpg
-- name: oldroad-old-road-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-light-dali.jpg
-- name: powerlines-power-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-blue-electricity.jpg
-- name: statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-blue-circuit-5.jpg
-- name: bf-skinner-gauge-on-aircraft-carrier.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-gauge-on-aircraft-carrier.jpg
-- name: windowmountain-window-mountain-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-internet-numbers.jpg
-- name: oldhouse-granaryfield-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-mucha-mult.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-internet-numbers.JPG
-- name: copper-circuit-thinking-man-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-thinking-man-statue.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-colorful-blocks.jpg
-- name: abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-sand-paper-file-00-00-07-91.jpg
-- name: cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-jap-dys-1.jpg
-- name: status-berlin-status-berlin-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-blue-circuit-3.jpg
-- name: aws-s3-square-yellow-tree-in-the-rocks-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-yellow-tree-in-the-rocks-square.jpg
+- name: server-cloud1-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-atari-missle.jpg
+- name: stories-new-machine-road-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-machine-road-atari-missle.jpg
+- name: stalin-time-statue-facing-scrunched.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-statue-facing-scrunched.jpg
+- name: crow-crow.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow.jpg
+- name: copper-circuit-downtown-sidewalk-washington.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-downtown-sidewalk-washington.jpg
+- name: legal-statue-legalstatue-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-blue-granite.jpg
+- name: containership-containership-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-horiz-circuit.jpg
+- name: berlinwall-DSC-0084-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall-DSC-0084-light-dali.jpg
+- name: udnie-IMG_7559.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7559.jpg
+- name: san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-cinnamon-rolls.jpg
+- name: udnie-DSC_0035-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-DSC_0035-2.jpg
+- name: carry-load-carryload-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-far-away.jpg
+- name: nyc-flag-nycflag-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-dali-two.jpg
+- name: mistywoods-babyfoot-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-mucha-mult.jpg
+- name: razorcliff-razorcliff-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-green-zuma.jpg
+- name: copper-circuit-old-church_36588495271_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-old-church_36588495271_o.jpg
+- name: abandonedbuildings_yellow_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_yellow_paper.jpg
+- name: oldcabin-store-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-colorful-dream.jpg
+- name: aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-27-93-800-500-0-max-0--5--5.jpg
+- name: blossombar-crafty-painting-file-00-00-50-45.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-crafty-painting-file-00-00-50-45.jpg
+- name: oldcabin-store-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-mucha-mult.jpg
+- name: old-door-lock-old-door-lock-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-post-modern.jpg
+- name: carry-load-carryload-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-smoking-cigarette.jpg
+- name: fence-fence-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-post-modern.jpg
+- name: bf-skinner-old-piano-paris-hospital.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-piano-paris-hospital.jpg
+- name: ellis-island-ellisisland-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-emily-carr.jpg
+- name: old-granary-field-oldhouse-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crunch-paper.jpg
+- name: machine-road-machine-road-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-umberto-bocc.jpg
+- name: la-muse-container-ship-in-seattle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-container-ship-in-seattle.jpg
+- name: copper-circuit-small-lighthouse_36556509232_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-small-lighthouse_36556509232_o.jpg
+- name: aws-s3-stories-36698086536-f214416faf-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-36698086536-f214416faf-z.jpg
+- name: hollywood-building-hollywood-building-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dark-dali.jpg
+- name: rain-princess-british-black-cab-street.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-british-black-cab-street.jpg
+- name: ellis-island-ellis-island-room-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-dark-soul.jpg
+- name: power-lines-power-lines-empty-space-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-colorful-dream.jpg
+- name: walled-garden-walled-garden-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-internet-numbers.jpg
+- name: stalin-time-pigeons-do-not-feed-them.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-pigeons-do-not-feed-them.jpg
+- name: old-house-oldhouse-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-post-modern.jpg
+- name: oldhouse-oldhouse-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-diego-rivera1.jpg
+- name: oldhouse-granaryfield-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-smoking-cigarette.jpg
+- name: old-granary-field-granaryfield-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-cinnamon-rolls.jpg
+- name: la-muse-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-capital-records-building.jpg
+- name: stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-cyril-e-power-the-tube-train-nighttime-in-paris-1.jpg
+- name: aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-statue-face-open-mouth-colorful-blocks.png
+- name: oldhousecars-house-old-cars-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-kandinsky-bv.jpg
+- name: aws-s3-stories-vancouver-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-vancouver-light-dali.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-far-away.jpg
+- name: containership-containership-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-bright-sand.jpg
+- name: school-clouds-church-clouds-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-light-dali.jpg
+- name: gypsymosaic-gypsy-eyes-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-far-away.jpg
+- name: power-lines-power-lines-empty-space-blue-circuit-5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-5.jpg
 ---
 Wadena's Yellow Ribbon Signs Are Symbol Of Support.&nbsp;State Looking Into Failed Expansion.&nbsp;Flamenco Por La Vida Opens New Studio After Leaving Roosevelt Row.&nbsp;The Week That Was In Latin America Photo Gallery.&nbsp;Area Fire Departments Battle Plant Blaze.&nbsp;How To Stay On Track With New Years Resolutions.&nbsp;Elon Musk Tweets New SpaceX Flight Simulation Video.&nbsp;Miss Moore County Karolyn Martin.&nbsp;
